# MindTheGap

./: README.md
install/: local_setup.sh  setup.sh
install/bot_reset_plugin/share/bot_reset_plugin/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/contact_plugin/share/contact_plugin/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_turtlebot3_gazebo/include/turtlebot3_gazebo/: turtlebot3_drive.hpp
install/my_turtlebot3_gazebo/lib/my_turtlebot3_gazebo/: turtlebot3_drive
install/my_turtlebot3_gazebo/share/my_turtlebot3_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/train_controller/share/train_controller/: package.bash  package.sh  package.xml
install/train_reset_plugin/share/train_reset_plugin/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/train_velocity_plugin/share/train_velocity_plugin/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3_rl/share/turtlebot3_rl/: package.bash  package.sh  package.zsh
log/: latest_build
src/bot_reset_plugin/: CMakeLists.txt  package.xml
src/bot_reset_plugin/src/: bot_reset_plugin.cpp
src/contact_plugin/: CMakeLists.txt
src/contact_plugin/src/: contact_plugin.cpp
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/my_turtlebot3_gazebo/: CMakeLists.txt  local_setup.sh  package.xml
src/my_turtlebot3_gazebo/cmake/: ament_cmake_export_dependencies-extras.cmake
src/my_turtlebot3_gazebo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_turtlebot3_gazebo/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  spawn_turtlebot3_train.launch.py  train_world.launch.py  turtlebot3_dqn_stage1.launch.py  turtlebot3_dqn_stage2.launch.py  turtlebot3_dqn_stage3.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
src/my_turtlebot3_gazebo/log/: latest_build
src/my_turtlebot3_gazebo/urdf/: turtlebot3_burger.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
src/my_turtlebot3_gazebo/worlds/: train_world.world
src/train_controller/: setup.py
src/train_controller/train_controller/: train_control_node.py
src/train_reset_plugin/: CMakeLists.txt
src/train_reset_plugin/src/: train_reset_plugin.cpp  train_reset_plugin_old.cpp
src/turtlebot3_rl/: setup.py
src/turtlebot3_rl/turtlebot3_rl/: dynamic_rl.py  test_rl.py  train_arrival_tests.py  train_test.py  turtlebot3_env_test.py  turtlebot3_env_test2.py
(+84 files in other folders)
