<?xml version="1.0"?>
<package format="3">
  <name>bot_reset_plugin</name>
  <version>0.0.1</version>
  <description>Plugin to reset bot position</description>
  <maintainer email="etopolo1@binghamton.edu">Emma Topolovec</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
</package>

