<?xml version="1.0"?>
<package format="3">
  <name>train_reset_plugin</name>
  <version>0.0.1</version>
  <description>Plugin to control train velocity and reset sim</description>
  <maintainer email="etopolo1@binghamton.edu">Emma Topolovec</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
</package>

